# sdm

./: .gitignore  README.md  pyproject.toml
sdm/: __init__.py  cli.py  download.py  metadata.py  sync.py
